--- a/css/styles.css
+++ b/css/styles.css
@@ -709,58 +709,50 @@ address {
 
 
 
-/* Модальне вікно */
- 
-.backdrop.is-hidden {
-    visibility: hidden;
-    opacity: 0;
-    pointer-events: none;
-}
-
+/* Modal */
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    opaсity: 1;
-    visibility: visible;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
 }
-
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
 .modal {
-    position: absolute;
-    width: 528px;
-    height: 581px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #FFFFFF;
-    border-radius: 4px;
-    box-shadow: 1px 0px 2px rgba(0, 0, 0, 0.2),
-        1px 0px 1px rgba(0, 0, 0, 0.14),
-        3px 0px 1px rgba(0, 0, 0, 0.12);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 528px;
+  min-height: 581px;
+  background-color: var(--secondary-accent-clr);
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
-
-.modal-btn {
-    position: absolute;
-     width: 30px;
-    height: 30px;
-    border-radius: 50%; 
-    top: 8px;
-    right: 8px;
-    cursor: pointer;
-    color: var(--header-color);
-     background-color: var(--main-bg-color); 
-    border: 1px solid rgba(0, 0, 0, 0.1);
+.modal-close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--secondary-accent-clr);
+  border-radius: 50%;
+  cursor: pointer;
 }
-
-
-
 
 
 
