--- a/css/styles.css
+++ b/css/styles.css
@@ -167,7 +167,7 @@ img {
      text-decoration: none;
      padding: 32px 0; 
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 
@@ -202,7 +202,7 @@ img {
     padding: 32px 0;
     display: flex;
     
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -217,7 +217,7 @@ img {
         padding: 32px 0;
         display: flex;
 
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 }
 
@@ -256,11 +256,11 @@ img {
     margin-bottom: 0;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image:linear-gradient(to right, rgba(47, 48, 58, 0.4),
-    rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
-     background-repeat: no-repeat;
-     background-size: cover;
-     background-position: center;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),
+            rgba(47, 48, 58, 0.4)), url(../Images/imagesbody/img-hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .hero-title {
@@ -490,8 +490,8 @@ img {
      height: 44px; 
     border-radius: 50%;   
      gap: 10px; 
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
-     fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
      
     
@@ -580,7 +580,7 @@ text-align: center;
     width: 170px;
     height: 92px;
     border: 1px solid #afb1b8;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)250ms, 
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
@@ -677,6 +677,10 @@ address {
 }
 
 .social-title {
+    font-weight: 700;
+        font-size: 16px;
+        line-height: calc(30/16);
+        letter-spacing: 0.06em;
     text-transform: uppercase;
     margin: 0;
     margin-bottom: 20px;
@@ -693,7 +697,7 @@ address {
  display: flex;
     fill: var(--txt-color);
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;    
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);    
      
 }
 
@@ -722,7 +726,7 @@ address {
 .mailing {
  display: block;
     margin: 0;
-    
+    margin-bottom: 20px;
     font-weight: 700;
     font-size: 16px;
     line-height: calc(30/16);
@@ -740,7 +744,7 @@ address {
     height: 50px;
     padding: 15px;
     padding-left: 16px;
-margin-top: 20px;
+
     font-weight: 400;
         font-size: 16px;
         line-height: calc(20/16);
@@ -750,7 +754,7 @@ margin-top: 20px;
     border-radius: 4px;
     color: rgba(255, 255, 255, 0.6);
 
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .subscribe-field::placeholder  {
@@ -772,19 +776,29 @@ margin-top: 20px;
 
 .footer-btn {
     
-   display: block;
+   display: flex;
+   align-items: center;
     margin: 0;
-    margin-top: 20px;
+   
     margin-left: 12px; 
-    padding: 0;
+     padding-top: 10px; 
+    padding-bottom: 10px;
+    padding-left: 28px;
+    padding-right: 28px;
     cursor: pointer;
-    width: 200px;
-    height: 50px;
+
+    
+        
+        font-weight: 700;
+        font-size: 16px;
+        line-height: calc(30/16);
+        letter-spacing: 0.06em;
+    
     background-color: var(--accent-color);
     color: var(--txt-color);
     border: none;
     border-radius: 4px;
-text-align: center;
+
 justify-content: center;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 200ms;
  
@@ -797,8 +811,9 @@ justify-content: center;
 
 
 
+
 .icon-subscribe {
-    
+   
     padding: 0;   
     
     fill: var(--txt-color)
@@ -880,6 +895,7 @@ font-weight: 700;
 font-size: 20px;
 line-height: 23.44px;
 letter-spacing: 0.03em;
+margin: 0;
 margin-bottom: 12px;
 
 color: var(--header-color);
@@ -908,7 +924,7 @@ color: var(--header-color);
 
 .f-group {
     position: relative;
-    
+    margin-bottom: 12px;
    
 }
 
@@ -921,7 +937,7 @@ color: var(--header-color);
     
     padding-left: 42px;
     margin: 0; 
-    margin-bottom: 12px;    
+        
 
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
@@ -945,7 +961,7 @@ color: var(--header-color);
         height: 15px;
    top: 14px;
    left: 15px;
-   margin-right: 20px;
+   
    
 
 
@@ -990,7 +1006,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
     font-size: 12px;
     line-height: 14.06px;
     letter-spacing: 0.01em;
-    color: grba(117, 117, 117, 0.5);
+    color: rgba(117, 117, 117, 0.5);
 }
 
 .comment:hover,
@@ -1002,48 +1018,62 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 
 /* Checkbox */
 
- .check-input {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-} 
-
-.icon {
-    display: block;
-    width: 16px;
-    height: 15px;
-    border: 1px solid color var(--header-color);
+.check-input {
+     position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;  
 }
 
-.check-input:checked~.icon {
-    opacity: 0;
+.check-input:checked + .icon-check {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
-    background-image: url(../images/checked.svg);
-    background-size: contain;
-    background-origin: border-box;
-    border: 1px solid rgba(33, 33, 33, 1);
+    background-image: url('../images/checked.svg');
+
+    
 }
 
-.check-input:unchecked~.icon {
-    opacity: 1;
-    border: 1px solid rgba(33, 33, 33, 1);
+.check-input:unchecked + .icon-check {
+    border-color: transparent;
+    background-color: transparent;
+    background-image: url('../images/unchecked.svg');
 
+    
 }
+
+.check-label {
+    display: flex;
+    margin-top: 20px;
+}
+
+
+.icon-check {
+     display: inline-flex;
+    width: 16px;
+        height: 15px;
+    margin-left: 10px;
+    margin-bottom: -12px;
+   background-image: url('../images/unchecked.svg');
+        
+    
+}
+
+
 
 
 
 .check-text {
-    margin-top: 20px;
-    margin-left: 50px;
-    display: inline-flex;
+    
+    margin: 0;
+    
+    margin-left: 9px;
+    display: flex;
     user-select: none;
 }
 
@@ -1069,8 +1099,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 
 .btn-form {
     display: block;
-    width: 200px;
-    height: 50px;
+    padding-top: 10px;
+    padding-right: 52px; 
+    padding-bottom: 10px;
+    padding-left: 52px;
     margin-right: auto;
     margin-top: 22px;
     margin-left: auto;
@@ -1088,6 +1120,13 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
         0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);;
+}
+
+.btn-t {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: calc(30/16);
+    letter-spacing: 0.06em;
 }
 
 
