--- a/css/styles.css
+++ b/css/styles.css
@@ -201,7 +201,7 @@ img {
     letter-spacing: 0.02em;
     padding: 32px 0;
     display: flex;
-    
+    text-align: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
@@ -216,7 +216,7 @@ img {
         text-decoration: none;
         padding: 32px 0;
         display: flex;
-
+        text-align:center;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         
 }
@@ -229,10 +229,6 @@ img {
 
 }
 
-
-
-
-
 .mail-icon {
     fill: currentColor;
     margin-right: 10px;
@@ -242,9 +238,6 @@ img {
     fill: currentColor;
     margin-right: 10px;
 }
-
-
-
 
 /* Hero */
 .section-hero {
@@ -665,10 +658,36 @@ address {
     transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-
-
- .footer-item :not(:nth-last-child) {
+.link-footer-address {
+    text-decoration: none;
+    color: var(--txt-color);
     margin-bottom: 9px;
+    transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.link-footer-address:hover,
+.link-footer-address:focus {
+    color: var(--accent-color);
+    text-decoration: none;
+}
+
+ .link-footer-item {
+    color: var(--add-color);
+    text-decoration: none;
+    font-size: 14px;
+    line-height: calc(24/14);
+    margin-bottom: 9px;
+    transition: color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link-footer-item:hover,
+.link-footer-item:focus {
+    color: var(--accent-color);
+    text-decoration: none;
+}
+
+.link-footer-item:last-child {
+    margin-bottom: 0px;
 }
 
 .social {
