--- a/css/styles.css
+++ b/css/styles.css
@@ -171,9 +171,8 @@ img {
     letter-spacing: 0.02em;
     padding: 32px 0;
     display: flex;
-    text-align: center;
+    align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 }
 
 
@@ -188,6 +187,7 @@ img {
         display: flex;
         text-align:center;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
         
 }
 
