--- a/css/styles.css
+++ b/css/styles.css
@@ -1029,7 +1029,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 .check-input:checked + .icon-check {
     border-color: var(--accent-color);
     background-color: var(--accent-color);
-    background-image: url('../images/checked.svg');
+    background-image: url('../Images/checked.svg');
 
     
 }
@@ -1037,7 +1037,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 .check-input:unchecked + .icon-check {
     border-color: transparent;
     background-color: transparent;
-    background-image: url('../images/unchecked.svg');
+    background-image: url('../Images/unchecked.svg');
 
     
 }
@@ -1054,7 +1054,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
         height: 15px;
     margin-left: 10px;
     margin-bottom: -12px;
-   background-image: url('../images/unchecked.svg');
+   background-image: url('../Images/unchecked.svg');
         
     
 }
