--- a/css/styles.css
+++ b/css/styles.css
@@ -674,8 +674,8 @@ address {
 
 .social-title {
     font-weight: 700;
-        font-size: 16px;
-        line-height: calc(30/16);
+        font-size: 14px;
+        line-height: calc(16/14);
         letter-spacing: 0.06em;
     text-transform: uppercase;
     margin: 0;
@@ -723,8 +723,8 @@ address {
     margin: 0;
     margin-bottom: 20px;
     font-weight: 700;
-    font-size: 16px;
-    line-height: calc(30/16);
+    font-size: 14px;
+    line-height: calc(16/14);
     letter-spacing: 00.06em;
     text-transform: uppercase;
 }
@@ -808,7 +808,7 @@ justify-content: center;
 
 
 .icon-subscribe {
-   
+   margin-left: 12px;
     padding: 0;   
     
     fill: var(--txt-color)
@@ -956,10 +956,6 @@ color: var(--header-color);
         height: 15px;
    top: 14px;
    left: 15px;
-   
-   
-
-
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;    
     
 } 
@@ -972,6 +968,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 
 
 .t-label {
+    display: block;
     margin: 0;
     margin-bottom: 4px;
     padding: 0;
@@ -983,11 +980,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .comment {
+    display: block;
     width: 100%;
     height: 120px;
     resize: none;
     padding: 12px 16px;
-    margin-bottom: -12px;
     border: 1.5px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     border-color: rgba(33, 33, 33, 0.2);
@@ -1043,7 +1040,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 
 .check-label {
+    align-items: center;
     display: flex;
+    justify-content: center;
     margin-top: 20px;
 }
 
@@ -1052,8 +1051,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
      display: inline-flex;
     width: 16px;
         height: 15px;
-    margin-left: 10px;
-    margin-bottom: -12px;
    background-image: url('../Images/unchecked.svg');
         
     
@@ -1099,7 +1096,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
     padding-bottom: 10px;
     padding-left: 52px;
     margin-right: auto;
-    margin-top: 22px;
+    margin-top: 30px;
     margin-left: auto;
     background-color: var(--accent-color);
         color: var(--txt-color);
